Prepare to be sparkled.

--- a/index.html
+++ b/index.html
@@ -59,16 +59,18 @@ RubyCocoa</p>
 <h2>License</h2>
 <p>BSD</p>
 <h2>Authors</h2>
-<p>Brian Olsen (brian@maven-group.org)<br/><br/>      </p>
+<p>Brian Olsen (brian at maven-group.org)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Brian Olsen (brian@maven-group.org)<br/>      </p>
+<p>Brian Olsen (brian at maven-group.org)
+<br/>      </p>
 
 
     <h2>Download</h2>
     <p>
-      You can download this project in either
-      <a href="http://github.com/griff/metaz/zipball/master">zip</a> or
-      <a href="http://github.com/griff/metaz/tarball/master">tar</a> formats.
+      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-0.1a.zip">Version 0.1a (sparkle test)</a>
+      <a href="release-notes.html#version-0.1a">Release notes</a>
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
