--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ RubyCocoa</p>
 
     <h2>Download</h2>
     <p>
-      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-0.2a.zip">Version 0.2a (sparkle test 2)</a>
-      <a href="release-notes.html#version-0.2a">Release notes</a>
+      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-0.3a.zip">Version 0.3a (Pre-alpha for review)</a>
+      <a href="release-notes.html#version-0.3a">Release notes</a>
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
