--- a/release-notes.html
+++ b/release-notes.html
@@ -19,6 +19,20 @@
 
   <table width="100%" class="table"  style="border:1px dashed #CCC;">
     <tr>
+      <td bgcolor="#4DBD02"><a name="version-0.3a"><b>Changes in version 0.3a</b></a></td>
+    </tr>
+    <tr class="table_contents">
+      <td>  
+  	<!-- Content Here -->
+  <p>Implemented write queue UI, drag &amp; drop, paste and services in files table.
+    </p>
+  	<!-- End Content -->
+      </td>
+    </tr>
+  </table>
+
+  <table width="100%" class="table"  style="border:1px dashed #CCC;">
+    <tr>
       <td bgcolor="#4DBD02"><a name="version-0.2a"><b>Changes in version 0.2a</b></a></td>
     </tr>
     <tr class="table_contents">
