--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/griff/metaz/zipball/master">
+      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-0.4a.zip">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/griff/metaz/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
       
     <h1><a href="http://github.com/griff/metaz">metaz</a> 
@@ -53,24 +51,21 @@
     </div>
 
     <h2>Dependencies</h2>
-<p>Sparkle
-AtomicParsley
+<p>Sparkle,
+AtomicParsley,
+MP4v2,
 RubyCocoa</p>
 <h2>License</h2>
 <p>BSD</p>
 <h2>Authors</h2>
-<p>Brian Olsen (brian at maven-group.org)
+<p>Brian Olsen (brian at maven dash group dot org)
 <br/>
 <br/>      </p>
-<h2>Contact</h2>
-<p>Brian Olsen (brian at maven-group.org)
-<br/>      </p>
-
 
     <h2>Download</h2>
     <p>
-      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-0.3a.zip">Version 0.3a (Pre-alpha for review)</a>
-      <a href="release-notes.html#version-0.3a">Release notes</a>
+      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-0.4a.zip">Version 0.4a (Alpha 1)</a>
+      <a href="release-notes.html#version-0.4a">Release notes</a>
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
