--- a/release-notes.html
+++ b/release-notes.html
@@ -19,6 +19,27 @@
 
   <table width="100%" class="table"  style="border:1px dashed #CCC;">
     <tr>
+      <td bgcolor="#4DBD02"><a name="version-0.4a"><b>Changes in version 0.4a</b></a></td>
+    </tr>
+    <tr class="table_contents">
+      <td>  
+  	<!-- Content Here -->
+    <p>Lots of changes but to mention a few:</p>
+  	<ul>
+  	  <li>TagChimp searching</li>
+  	  <li>Presets</li>
+  	  <li>Chapter writing</li>
+  	  <li>Preferences</li>
+  	  <li>Ratings</li>
+  	  <li>Genre</li>
+  	</ul>
+  	<!-- End Content -->
+      </td>
+    </tr>
+  </table>
+
+  <table width="100%" class="table"  style="border:1px dashed #CCC;">
+    <tr>
       <td bgcolor="#4DBD02"><a name="version-0.3a"><b>Changes in version 0.3a</b></a></td>
     </tr>
     <tr class="table_contents">
