--- a/release-notes.html
+++ b/release-notes.html
@@ -16,6 +16,23 @@
 	</style>
 </head>
 <body>
+  <table width="100%" class="table"  style="border:1px dashed #CCC;">
+    <tr>
+      <td bgcolor="#4DBD02"><a name="version-0.5a"><b>Changes in version 0.5a</b></a></td>
+    </tr>
+    <tr class="table_contents">
+      <td>  
+  	<!-- Content Here -->
+    <p>This is a minor update that fixes a few bugs and improves the UI.</p>
+  	<ul>
+  	  <li>Fixed a few bugs with rating and genre handling</li>
+  	  <li>Fixed date reading both from AtomicParsley and TagChimp</li>
+  	  <li>Cleaned up write queue and improved ui for status of tag write</li>
+  	</ul>
+  	<!-- End Content -->
+      </td>
+    </tr>
+  </table>
 
   <table width="100%" class="table"  style="border:1px dashed #CCC;">
     <tr>
