--- a/release-notes.html
+++ b/release-notes.html
@@ -18,6 +18,19 @@
 <body>
   <table width="100%" class="table"  style="border:1px dashed #CCC;">
     <tr>
+      <td bgcolor="#4DBD02"><a name="version-0.6a"><b>Changes in version 0.6a</b></a></td>
+    </tr>
+    <tr class="table_contents">
+      <td>  
+  	<!-- Content Here -->
+    <p>Fixed critical queue stopping bug.</p>
+  	<!-- End Content -->
+      </td>
+    </tr>
+  </table>
+
+  <table width="100%" class="table"  style="border:1px dashed #CCC;">
+    <tr>
       <td bgcolor="#4DBD02"><a name="version-0.5a"><b>Changes in version 0.5a</b></a></td>
     </tr>
     <tr class="table_contents">
