--- a/release-notes.html
+++ b/release-notes.html
@@ -18,6 +18,25 @@
 <body>
   <table width="100%" class="table"  style="border:1px dashed #CCC;">
     <tr>
+      <td bgcolor="#4DBD02"><a name="version-0.7a"><b>Changes in version 0.7a</b></a></td>
+    </tr>
+    <tr class="table_contents">
+      <td>  
+  	<!-- Content Here -->
+    <p>The new and improved version now with Amazon US searching.</p>
+    <p>Also made the following changes:</p>
+  	<ul>
+  	  <li>Changed search profiles so that title can be disabled like other search terms</li>
+  	  <li>Fixed the MetaX presets video type import bug and added code to correct already imported presets</li>
+  	  <li>Fixed x64 empty rating bug</li>
+  	</ul>
+  	<!-- End Content -->
+      </td>
+    </tr>
+  </table>
+
+  <table width="100%" class="table"  style="border:1px dashed #CCC;">
+    <tr>
       <td bgcolor="#4DBD02"><a name="version-0.6a"><b>Changes in version 0.6a</b></a></td>
     </tr>
     <tr class="table_contents">
