--- a/release-notes.html
+++ b/release-notes.html
@@ -18,6 +18,28 @@
 <body>
   <table width="100%" class="table"  style="border:1px dashed #CCC;">
     <tr>
+      <td bgcolor="#4DBD02"><a name="version-0.8a"><b>Changes in version 0.8a</b></a></td>
+    </tr>
+    <tr class="table_contents">
+      <td>  
+  	<!-- Content Here -->
+    <p>Made the following changes:</p>
+  	<ul>
+  	  <li>Growl notifications</li>
+  	  <li>Undo in presets panel</li>
+  	  <li>Undo for multiple file selection</li>
+  	  <li>Added a full search result apply as proposed by Kevin Pratt</li>
+  	  <li>Fixed support for 64 bit MPEG4 files</li>
+  	  <li>Better error messages</li>
+  	  <li>Fixed leopard support</li>
+  	</ul>
+  	<!-- End Content -->
+      </td>
+    </tr>
+  </table>
+
+  <table width="100%" class="table"  style="border:1px dashed #CCC;">
+    <tr>
       <td bgcolor="#4DBD02"><a name="version-0.7a"><b>Changes in version 0.7a</b></a></td>
     </tr>
     <tr class="table_contents">
