--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="container">
 
     <div class="download">
-      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-0.8a.zip">
+      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-1.0a5.zip">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
     </div>
       
@@ -58,14 +58,15 @@ RubyCocoa</p>
 <h2>License</h2>
 <p>BSD</p>
 <h2>Authors</h2>
-<p>Brian Olsen (brian at maven dash group dot org)
+<p>Brian Olsen (brian at maven dash group dot org)<br>
+Nigel Graham (nigel at maven dash group dot org)
 <br/>
 <br/>      </p>
 
     <h2>Download</h2>
     <p>
-      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-0.8a.zip">Version 0.8a (Alpha 4)</a>
-      <a href="release-notes.html#version-0.8a">Release notes</a>
+      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-1.0a5.zip">Version 1.0a5 (Alpha 5)</a>
+      <a href="release-notes.html#version-1.0a5">Release notes</a>
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
