--- a/release-notes.html
+++ b/release-notes.html
@@ -18,6 +18,24 @@
 <body>
   <table width="100%" class="table"  style="border:1px dashed #CCC;">
     <tr>
+      <td bgcolor="#4DBD02"><a name="version-1.0a5"><b>Changes in version 1.0a5</b></a></td>
+    </tr>
+    <tr class="table_contents">
+      <td>  
+  	<!-- Content Here -->
+    <p>Made the following changes:</p>
+  	<ul>
+  	  <li>Chapter copy/paste</li>
+  	  <li>Progressbar on dock icon</li>
+  	  <li>Termination confimations</li>
+  	  <li>Added a great deal of keyboard shortcuts</li>
+  	</ul>
+  	<!-- End Content -->
+      </td>
+    </tr>
+  </table>
+  <table width="100%" class="table"  style="border:1px dashed #CCC;">
+    <tr>
       <td bgcolor="#4DBD02"><a name="version-0.8a"><b>Changes in version 0.8a</b></a></td>
     </tr>
     <tr class="table_contents">
