--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="container">
 
     <div class="download">
-      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-1.0a5.zip">
+      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-1.0a6.zip">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
     </div>
       
@@ -65,13 +65,19 @@ Nigel Graham (nigel at maven dash group dot org)
 
     <h2>Download</h2>
     <p>
-      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-1.0a5.zip">Version 1.0a5 (Alpha 5)</a>
-      <a href="release-notes.html#version-1.0a5">Release notes</a>
+      <a href="http://cloud.github.com/downloads/griff/metaz/MetaZ-1.0a6.zip">Version 1.0a6 (Alpha 6)</a>
+      <a href="release-notes.html#version-1.0a6">Release notes</a>
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/griff/metaz</pre>
     </p>
+
+    <h2>Bugs / Feature request</h2>
+    <p>
+      For bugs and feature requests you can use our issue tracker at <a href="http://metaz.lighthouseapp.com/">metaz.lighthouseapp.com</a>
+    </p>
+
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
     <input type="hidden" name="cmd" value="_s-xclick" />
     <input type="image" src="http://www.tagchimp.com/images/tagchimp_donate.png" border="0" name="submit" alt="Donate to tagChimp with PayPal - The safer, easier way to pay online!" />
