--- a/release-notes.html
+++ b/release-notes.html
@@ -27,6 +27,20 @@
   <table>
     <tr>
       <td class='header'>
+        <a name='version-1.0a7'>
+          <b>Changes in version 1.0a7</b>
+        </a>
+      </td>
+    </tr>
+    <tr class='contents'>
+      <td>
+        <p>Fixed problem with empty tagchimp result causing a crash</p>
+      </td>
+    </tr>
+  </table>
+  <table>
+    <tr>
+      <td class='header'>
         <a name='version-1.0a6'>
           <b>Changes in version 1.0a6</b>
         </a>
