--- a/release-notes.html
+++ b/release-notes.html
@@ -27,6 +27,67 @@
   <table>
     <tr>
       <td class='header'>
+        <a name='version-1.0a8'>
+          <b>Changes in version 1.0a8</b>
+        </a>
+      </td>
+    </tr>
+    <tr class='contents'>
+      <td>
+        <p>
+          After a long hiatus MetaZ is back with a new release that fixes issues with Lion and Power PC
+          as well as support for having only the year as release date.
+        </p>
+        <p>
+          We also now have an icon of our very own. Donated by
+          <a href='http://www.partout.info'>Thomas Jakobi</a>
+        </p>
+        <p>The complete list of changes are:</p>
+        <ul>
+          <li>Made files table and presets table ignore newlines and reverse editing on escape</li>
+          <li>Changed how words are defined for file name editing so it behaves more like renaming files in Finder (e.g. dot is a word separator)</li>
+          <li>Fixed doubleClickAtIndex for file name editing</li>
+          <li>Commit the edit before doing a search.</li>
+          <li>Fixed small bug in picture context menu where show image editor option was disabled when picture was a RemoteData</li>
+          <li>Added option to cancel editing by typing esc. for all UndoTableViews</li>
+          <li>Changed MZDynamicObject so that it doesn't use NSInvocation when being called from getValueForKey and setValue:forKey</li>
+          <li>Made identifier, localizedName and editorCell for class MZTag into properties</li>
+          <li>Fixed small issue in MZPriorObserverFix that caused a great deal of unresponsiveness</li>
+          <li>Added missing call to delegate dataProvider:controller:writeStartedForEdits: in APDataProvider</li>
+          <li>Added hidden start column to chapter editor</li>
+          <li>Added column menu to chapter editor</li>
+          <li>Changed some getters into properties</li>
+          <li>Added compare method to MZTimeCode</li>
+          <li>Fixed small issue in web chapter parsing where chapters that lasted less than a minute were not supported</li>
+          <li>Fixed chapter edit undo [<a href="http://metaz.lighthouseapp.com/projects/43700/tickets/12">12</a>]</li>
+          <li>Changed the rename preset undo action to "Rename Preset"</li>
+          <li>Changed some privat class categories to extensions</li>
+          <li>Changed building.txt to a README</li>
+          <li>Added our TheTVDB API key to repository.</li>
+          <li>Fixed return warning in MetaEdits</li>
+          <li>Fixed tvdb view in browser and added menu items for view episode and view season</li>
+          <li>Did a Build and Analyze and fixed the found problems</li>
+          <li>Added fix for calling shell scripts in MZTaskOperation that messed with stdout</li>
+          <li>Added icon from Thomas Jakobi</li>
+          <li>Set new icon in Info.plist</li>
+          <li>Updated mp4chaps to trunk-r479 and fixed missing ppc architecture [<a href="http://metaz.lighthouseapp.com/projects/43700/tickets/22">22</a>] [<a href="http://metaz.lighthouseapp.com/projects/43700/tickets/23">23</a>]</li>
+          <li>Lion issues should now be fixed [<a href="http://metaz.lighthouseapp.com/projects/43700/tickets/31">31</a>]</li>
+          <li>Changed tagchimp hostname from www.tagchimp.com to tagchimp.com because that is the CN in their certificate hopefully fixing [<a href="http://metaz.lighthouseapp.com/projects/43700/tickets/27">27</a>]</li>
+          <li>Fixed [<a href="http://metaz.lighthouseapp.com/projects/43700/tickets/29">29</a>] so now main window reopens when dropping a file or using open from main menu</li>
+          <li>Fixed memory problem in open that caused a crash because dictionary was released to early</li>
+          <li>Changed open sheet to use file extensions instead of UTIs becaused it was causing problems with m4v extension [<a href="http://metaz.lighthouseapp.com/projects/43700/tickets/31">31</a>]</li>
+          <li>Changed small program icon used in search result to the new MetaZ icon</li>
+          <li>Added icon credit</li>
+          <li>Created my own DateFormatter to fix nil bug [<a href="http://metaz.lighthouseapp.com/projects/43700/tickets/9">9</a>]</li>
+          <li>Added a new category with a method for checking if all chars in a string are part of a given NSCharacterSet</li>
+          <li>Added support for having only the year in date tag</li>
+        </ul>
+      </td>
+    </tr>
+  </table>
+  <table>
+    <tr>
+      <td class='header'>
         <a name='version-1.0a7'>
           <b>Changes in version 1.0a7</b>
         </a>
