Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ functionality and it had some really anoying (to us at least) little missing
 things like no proper window resizing. This lead to us starting MetaZ as a
 reimplementation of MetaX with a few ideas of our own sprinkled in there.</p>
 
+<h1>Bugs / Feature request</h1>
+
+<p>For bugs and feature requests you can use our <a href="https://github.com/griff/metaz/issues">issue tracker at github</a></p>
+
 <h1>Building</h1>
 
 <p>There are some files missing in the git repository that you will need if you
